tests/snapshots/test_runner__tests__compiler__typecheck__contextual_unification_5__contextual_unification_5.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
entry
  let f
    : {x: { y: Int}} -> Int
    = -> {x = { z }} [ 2 ];
  ()

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/contextual_unification_5/contextual_unification_5.kk:4:17
  │
4 │     = -> {x = { z }} [ 2 ];
  │                 ^ No such property
  │
  = Available properties:
      y
